# fedcm-example-rp

./: .gitignore  Cargo.toml  README.md
idp_1/: Cargo.toml
idp_1/src/: app.rs  idp.rs  lib.rs  main.rs
idp_2/: Cargo.toml
idp_2/src/: app.rs  idp.rs  main.rs
rp/: Cargo.toml
rp/src/: app.rs  fileserv.rs  lib.rs  main.rs
src/: app.rs  fileserv.rs  idp.rs  lib.rs  main.rs
